--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -8,16 +8,12 @@
 .main-container ul {
 	list-style: none;
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(4, 1fr);
 	grid-gap: 30px;
 	margin-top: 50px;
 }
 
-.main-container ul li {
+.main-container ul li div {
 	display: flex;
 	flex-direction: column;
-}
-
-.main-container ul li footer {
-	flex: 1;
 }
