--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
+@font-face {
+	font-family: 'Open Sans Condensed';
+	src: url('assets/fonts/Open_Sans_Condensed/OpenSansCondensed-Light.ttf');
+}
+
+@font-face {
+	font-family: 'Roboto Light';
+	src: url('assets/fonts/Roboto/Roboto-Light.ttf');
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('assets/fonts/Roboto/Roboto-Regular.ttf');
+}
+
+@font-face {
+	font-family: 'Amatic';
+	src: url('assets/fonts/Amatic_SC/AmaticSC-Regular.ttf');
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('assets/fonts/Montserrat/Montserrat-Regular.ttf');
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -19,5 +44,9 @@ body {
 body,
 input,
 button {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Roboto', sans-serif;
+}
+
+.hide {
+	display: none;
 }
