--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -5,15 +5,27 @@
 	text-align: center;
 }
 
+.main-container .logged-user {
+	font-size: 0.7em;
+	font-family: 'Roboto Light';
+}
+
 .main-container ul {
 	list-style: none;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 30px;
+	grid-gap: 20px;
 	margin-top: 50px;
 }
 
 .main-container ul li div {
 	display: flex;
 	flex-direction: column;
+}
+
+.main-container .empty-message {
+	font-size: 32px;
+	color: #dededece;
+	font-weight: bold;
+	margin-top: 300px;
 }
