--- a/src/components/CardView/Match/style.css
+++ b/src/components/CardView/Match/style.css
@@ -9,6 +9,7 @@
 	justify-content: center;
 	align-items: center;
 	background: rgba(0, 0, 0, 0.9);
+	font-size: 1.4em;
 }
 
 .match-container .card-user p,
@@ -21,15 +22,22 @@
 	background: transparent;
 	color: #fefefe;
 	border: none;
-	width: 20%;
+	width: 30%;
 	max-width: 400px;
 	height: auto;
+}
+
+.match-container .card-user strong {
+	font-family: Sacramento;
+	font-size: 2.1em;
+	font-weight: normal;
 }
 
 .match-container .card-user img {
 	border-radius: 50%;
 	border: 5px solid #dedede;
-	margin: 30px auto;
+	margin: 10px auto;
+	max-width: 260px;
 }
 
 .match-container .card-user footer {
