--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,60 @@
 @font-face {
-	font-family: 'PoiretOne';
-	src: url('assets/fonts/Poiret_One/PoiretOne-Regular.ttf');
+    font-family: 'PoiretOne';
+    src: url('assets/fonts/Poiret_One/PoiretOne-Regular.ttf');
 }
 @font-face {
-	font-family: 'Sacramento';
-	src: url('assets/fonts/Sacramento/Sacramento-Regular.ttf');
+    font-family: 'Rancho';
+    src: url('assets/fonts/Rancho/Rancho-Regular.ttf');
 }
-
 @font-face {
-	font-family: 'Roboto Light';
-	src: url('assets/fonts/Roboto/Roboto-Light.ttf');
-}
-
-@font-face {
-	font-family: 'Roboto';
-	src: url('assets/fonts/Roboto/Roboto-Regular.ttf');
+    font-family: 'Sacramento';
+    src: url('assets/fonts/Sacramento/Sacramento-Regular.ttf');
 }
 
 @font-face {
-	font-family: 'Amatic';
-	src: url('assets/fonts/Amatic_SC/AmaticSC-Regular.ttf');
+    font-family: 'Roboto Light';
+    src: url('assets/fonts/Roboto/Roboto-Light.ttf');
 }
 
 @font-face {
-	font-family: 'Montserrat';
-	src: url('assets/fonts/Montserrat/Montserrat-Regular.ttf');
+    font-family: 'Roboto';
+    src: url('assets/fonts/Roboto/Roboto-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Amatic';
+    src: url('assets/fonts/Amatic_SC/AmaticSC-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('assets/fonts/Montserrat/Montserrat-Regular.ttf');
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	outline: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
 }
 
 html,
 body,
 #root {
-	height: 100%;
-	color: #f5f5f5;
+    height: 100%;
+    color: #f5f5f5;
 }
 
 body {
-	background: #222222;
+    background: #222222;
 }
 
 body,
 input,
 button {
-	font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .hide {
-	display: none;
+    display: none;
 }
