--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -1,30 +1,36 @@
 .main-container {
-	max-width: 980px;
-	margin: 0 auto;
-	padding: 50px 0;
-	text-align: center;
+    max-width: 980px;
+    margin: 0 auto;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.main-container h1 {
+    margin-top: 20px;
+    font-family: Rancho;
+    font-size: 1.4em;
 }
 
 .main-container .logged-user {
-	font-size: 0.7em;
-	font-family: 'Roboto Light';
+    font-size: 0.7em;
+    font-family: 'Roboto Light';
 }
 
 .main-container ul {
-	list-style: none;
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 20px;
-	margin-top: 50px;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 50px;
 }
 
 .main-container ul li div {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .main-container .empty-message {
-	font-size: 4em;
-	color: #dededece;
-	font-family: Sacramento;
+    font-size: 4em;
+    color: #dededece;
+    font-family: Sacramento;
 }
