--- a/src/components/CardView/User/style.css
+++ b/src/components/CardView/User/style.css
@@ -6,9 +6,11 @@
 	position: relative;
 }
 
-.card-user img {
-	max-width: 100%;
+.card-user .menu,
+.card-user img.avatar {
+	width: 100%;
 	border-radius: 5px 5px 0 0;
+	border: none;
 }
 
 .card-user img.avatar {
@@ -126,12 +128,17 @@
 	color: #df4723;
 }
 
+.card-user header {
+	position: relative;
+}
+
 .card-user .menu {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	align-self: center;
 	width: 100%;
+	height: 100%;
 	min-height: 230px;
 	padding: 10px;
 	background: rgba(0, 0, 0, 0.85);
@@ -167,7 +174,7 @@
 	list-style: none;
 	color: #fff;
 	cursor: pointer;
-	font-size: 0.8em;
+	font-size: 1em;
 	padding: 8px 4px;
 	font-family: PoiretOne;
 	font-weight: bold;
