--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -1,36 +1,72 @@
 .main-container {
-    max-width: 980px;
-    margin: 0 auto;
-    padding: 50px 0;
-    text-align: center;
+	width: 1200px;
+	max-width: 94%;
+	margin: 0 auto;
+	padding: 50px 0;
+	text-align: center;
 }
 
 .main-container h1 {
-    margin-top: 20px;
-    font-family: Rancho;
-    font-size: 1.4em;
+	margin-top: 20px;
+	font-family: Rancho;
+	font-size: 1.4em;
 }
 
 .main-container .logged-user {
-    font-size: 0.7em;
-    font-family: 'Roboto Light';
+	font-size: 0.7em;
+	font-family: 'Roboto Light';
 }
 
 .main-container ul {
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
-    margin-top: 50px;
+	list-style: none;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 20px;
+	margin-top: 50px;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+	.main-container ul {
+		grid-template-columns: 1fr;
+	}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+	.main-container ul {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+	.main-container ul {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+	.main-container ul {
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+
+/* Extra large devices (large laptops and desktops, 1800px and up) */
+@media only screen and (min-width: 1800px) {
+	.main-container ul {
+		grid-template-columns: repeat(5, 1fr);
+	}
 }
 
 .main-container ul li div {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .main-container .empty-message {
-    font-size: 4em;
-    color: #dededece;
-    font-family: Sacramento;
+	font-size: 4em;
+	color: #dededece;
+	font-family: Sacramento;
 }
